# code-challenge-2024-hax0kartik

./: .gitignore  .gitmodules  SOLUTION.md  meson.build  run.sh
source/: block.cpp  block.h  crypto.cpp  crypto.h  main.cpp  mempool.cpp  mempool.h  meson.build  script.cpp  script.h  serializer.cpp  serializer.h  tx.cpp  tx.h  util.h  verifier.cpp  verifier.h
